--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,7 @@
 
   <depend>cv_bridge</depend>
   <depend>python3-opencv</depend>
+  <exec_depend>python3-numpy</exec_depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
 
